- Clean action store after enrolling to new configuration {pull}18656[18656]
- Avoid watching monitor logs {pull}18723[18723]
- Correctly report platform and family. {issue}18665[18665]
- Guard against empty stream.datasource and namespace {pull}18769[18769]
- Fix install service script for windows {pull}18814[18814]
- Properly stops subprocess on shutdown {pull}19567[19567]

==== New features

- Generate index name in a format type-dataset-namespace {pull}16903[16903]
- OS agnostic default configuration {pull}17016[17016]
- Introduced post install hooks {pull}17241[17241]
- Support for config constraints {pull}17112[17112]
- Introduced `mage demo` command {pull}17312[17312]
- Display the stability of the agent at enroll and start.  {pull}17336[17336]
- Expose stream.* variables in events {pull}17468[17468]
- Monitoring configuration reloadable {pull}17855[17855]
- Pack ECS metadata to request payload send to fleet {pull}17894[17894]
- Allow CLI overrides of paths {pull}17781[17781]
- Enable Filebeat input: S3, Azureeventhub, cloudfoundry, httpjson, netflow, o365audit. {pull}17909[17909]
- Configurable log level {pull}18083[18083]
- Use data subfolder as default for process logs {pull}17960[17960]
- Enable introspecting configuration {pull}18124[18124]
- Follow home path for all config files {pull}18161[18161]
- Do not require unnecessary configuration {pull}18003[18003]
- Use nested objects so fleet can handle metadata correctly {pull}18234[18234]
- Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull}17935[17935]
- More clear output of inspect command {pull}18405[18405]
- Pick up version from libbeat {pull}18350[18350]
- Use shorter hash for application differentiator {pull}18770[18770]
- When not port are specified and the https is used fallback to 443 {pull}18844[18844]
- Change monitoring defaults for agent {pull}18927[18927]
- Agent verifies packages before using them {pull}18876[18876]